--- a/client/templates.html
+++ b/client/templates.html
@@ -19,7 +19,27 @@
 </template>
 
 <template name="showHouse">
+	{{#with house}}
+		<h2>Taking care of {{name}}'s house</h2>
+		{{#each plants}}
+			{{> plantDetails}}
+		{{/each}}
+		<p>Last visit: {{lastVisit}}</p>
+	{{ else }}
+		You need to select a house.
+	{{/with}}
 </template>
+
+<template name="plantDetails">
+	<p><strong>Plant color:</strong>	{{color}}</p>
+	<p>
+		<strong>Instructions:</strong>	{{instructions}}
+		<button class="water" data-id="{{../_id}}-{{color}}" {{isWatered}}>
+			Done
+		</button>
+	</p>
+</template>
+
 
 <template name="houseForm">
 </template>
