--- a/client/templates.html
+++ b/client/templates.html
@@ -25,6 +25,7 @@
 			{{> plantDetails}}
 		{{/each}}
 		<p>Last visit: {{lastVisit}}</p>
+		<button id="delete" data-id="{{_id}}">Delete this house</button>
 	{{ else }}
 		You need to select a house.
 	{{/with}}
@@ -42,4 +43,14 @@
 
 
 <template name="houseForm">
+	<h3>Add a house</h3>
+	<form id="houseForm">
+		Name <input id="house-name" type="text" placeholder="Name"><br/>
+		Plant<br/>
+		Color <input id="plant-color" type="text">
+		Instructions <input id="instructions" type="text">
+		<br/>
+		<br/>
+		<button id="saveHouse">Save House</button>
+	</form>
 </template>
