--- a/client/templates.html
+++ b/client/templates.html
@@ -21,11 +21,17 @@
 <template name="showHouse">
 	{{#with selectedHouse}}
 		<h2>Taking care of {{name}}'s house</h2>
+    {{#if edited}}
+    <p class="warning">There are unsaved changes!</p>
+    {{/if}} 
+
 		{{#each plants}}
 			{{> plantDetails}}
 		{{/each}}
 		<p>Last visit: {{lastVisit}}</p>
-		<button id="delete" data-id="{{_id}}">Delete this house</button>
+		<button id="delete" class="btn btn-default" data-id="{{_id}}">
+      Delete this house
+    </button>
 	{{ else }}
 		You need to select a house.
 	{{/with}}
@@ -35,7 +41,7 @@
 	<p><strong>Plant color:</strong>	{{color}}</p>
 	<p>
 		<strong>Instructions:</strong>	{{instructions}}
-		<button class="water" data-id="{{../_id}}-{{color}}" {{isWatered}}>
+		<button class="water btn btn-default" data-id="{{../_id}}-{{color}}" {{isWatered}}>
 			Done
 		</button>
 	</p>
@@ -46,22 +52,22 @@
 	<h3>Edit {{name}}'s house</h3>
 	<form id="houseForm">
 		<fieldset id="house-name">
-			Name <input type="text" placeholder="Name" value="{{name}}"><br/>
+			Name <input class="name" type="text" placeholder="Name" value="{{name}}"><br/>
 		</fieldset>
 		<label>Plants</label>
 		{{#each withIndex plants}}
 			{{> plantFieldset}}
 		{{/each}}
-		<button class="addPlant">Add Plant</button>
+		<button class="addPlant btn btn-default">Add Plant</button>
 		<br/>
-		<button id="saveHouse" data-id="{{_id}}">Save House</button>
+		<button id="saveHouse" class="btn btn-default" data-id="{{_id}}">Save House</button>
 	</form>
 </template>
 
 <template name="plantFieldset">
-	<fieldset>
-		Color <input id="plant-color" type="text" value="{{color}}" data-index="{{index}}">
-		Instructions <input id="instructions" type="text" value="{{instructions}}" data-index="{{index}}">
-		<button class="removePlant">Remove Plant</button>
+	<fieldset id="plant-{{index}}">
+		Color <input id="plant-color" class="color" type="text" value="{{color}}" data-index="{{index}}">
+		Instructions <input id="instructions" class="instructions" type="text" value="{{instructions}}" data-index="{{index}}">
+		<button class="removePlant btn btn-default">Remove Plant</button>
 	</fieldset>
 </template>	
